--- a/app/scss/0-config/_general.scss
+++ b/app/scss/0-config/_general.scss
@@ -7,7 +7,7 @@ body {
     font-size: $fz-default;
     font-family: $font-family-content;
     color: $color-black-dark;
-    background-color: white;
+    background-color: white; // white
 }
 
 p {
